# LedgerPro_2025

./:  Testing Framework Template.md  .gitignore  .swiftlint.yml  A+ Achievement Plan.md  CATEGORIZATION_UPGRADE.md  CATEGORY_PICKER_IMPROVEMENTS.md  CICD_FIX_SUMMARY.md  CI_CD_SETUP.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE_RULE_BUILDER_SUMMARY.md  Claude_WorkFlow.md  DOCUMENTATION_CLEANUP_PLAN.md  FINAL_IMPLEMENTATION_SUMMARY.md  GIT_WORKFLOW.md  IMPORT_CATEGORIZATION_COMPLETE.md  LAUNCH_READY.md  LEARNING_INTEGRATION_SUMMARY.md  LedgerPro Category System Upgrade.md  LedgerPro Development Workflow.md  MCP_GUIDE.md  MCP_TROUBLESHOOTING.md  PDF_PROCESSING_ISSUE.md  PHASE1_LOCAL_INTELLIGENCE_COMPLETE.md  POPUP_SIZING_UPDATE.md  PROJECT_HEALTH_REPORT.md  Package.swift  README.md  RULES_UI_IMPLEMENTATION.md  RULE_PERSISTENCE_COMPLETE.md  SYSTEM_DESIGN.md  TEST_RESULTS.md  TODO.md  VERIFICATION_REPORT.md  apply_all_fixes.sh  check_tests.sh  check_tests_correct_dir.sh  debug_api_tests.sh  extract_test_summary.sh  fix_all_mainactor.sh  (+19 more)
.github/: README.md  pull_request_template.md
LedgerPro/: .gitignore  API_TESTING_IMPLEMENTATION_SUMMARY.md  CATEGORY_UPGRADE.md  CHANGELOG.md  CORE_DATA_MODEL_SETUP.md  CoreDataTestSetup.swift.disabled  DEVELOPMENT_PRINCIPLES.md  FINDINGS_Debug.md  FINDINGS_Tests.md  FOREX_DETECTION_COMPLETE_SUMMARY.md  GIT_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  MCP_DUPLICATE_BRIDGE_FIX_RESULTS.md  MCP_ENHANCED_GRACE_PERIOD.md  MCP_GRACE_PERIOD_FIX.md  MCP_INTEGRATION_TEST_RESULTS.md  (+49 more)
LedgerPro/mcp-servers/financial-api-diagnostics/: pyproject.toml  server.py
(+1002 files in other folders)
